apps/order-service/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  labels:
    app: order-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: eu.gcr.io/rhenus-hackathon/argo-dc/order-service:main
        ports:
        - containerPort: 80
