apps/order-service/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
